# 3d-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  run.sh  server_main.cpp
assets/shader/: shader.fs  shader.vs
include/component/: camera.hpp  entity.hpp  light.hpp  loader.hpp  master_renderer.hpp  model_texture.hpp  obj_loader.hpp  player.hpp  raw_model.hpp  renderer.hpp  shader_program.hpp  static_shader.hpp  textured_model.hpp
include/mmo/: client_interface.hpp  connection.hpp  message.hpp  server_interface.hpp  thread_safe_queue.hpp
include/net/: client.hpp  server.hpp
include/util/: common.hpp  logger.hpp  math.hpp  mmo_common.hpp
include/window/: window.hpp
src/: camera.cpp  client.cpp  entity.cpp  light.cpp  loader.cpp  logger.cpp  master_renderer.cpp  math.cpp  model_texture.cpp  obj_loader.cpp  player.cpp  raw_model.cpp  renderer.cpp  server.cpp  shader_program.cpp  static_shader.cpp  textured_model.cpp  window.cpp
